# pytest-result-sender-r

./: README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yaml
src/pytest_result_sender_r/: plugin.py
tests/: test_ini.py
